out of stuck & fix bugs

--- a/cat-food/src/App.scss
+++ b/cat-food/src/App.scss
@@ -1,9 +1,12 @@
 @font-face {
     font-family: 'Exo2.0';
-    src: url(./fonts/Exo2.0-Thin.otf); 
-   } 
+    src: url(./fonts/Exo2.0-Thin.otf);
+}
 
 $additional-font-color: #666666;
+$default-font-color: #1698D9;
+$selected-font-color: #D91667;
+$out-of-stuck-color: #B3B3B3;
 
 body {
     background-image: url('../public/images/Pattern.png');
@@ -17,14 +20,11 @@ p {
 .box {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    // flex-wrap: nowrap;
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // margin-right: -50%;
-    // transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .title {
@@ -32,21 +32,18 @@ p {
     color: white;
     font-weight: normal;
     font-family: 'Exo2.0';
+    margin: 0 0 30px 0;
 }
 
 .catalog {
-    // margin: auto;
     display: flex;
-    // align-items: center;
-    // justify-content: space-between;
     gap: 80px;
 }
-
 
 .catalog-item {
     box-sizing: border-box;
     border-radius: 12px;
-    border: 4px solid #1698D9;
+    border: 4px solid $default-font-color;
     background-color: #F2F2F2;
     position: relative;
     clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
@@ -61,46 +58,23 @@ p {
         position: relative;
         content: '';
         width: 65px;
-        background-color: #1698D9;
+        background-color: $default-font-color;
         display: block;
         height: 4px;
         top: 6px;
         left: -62px;
         transform: rotate(-45deg);
     }
-}
 
-.out-of-stock-item {
-    box-sizing: border-box;
-    border-radius: 12px;
-    border: 4px solid #B3B3B3;
-    background-color: #F2F2F2;
-    position: relative;
-    clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
-    padding: 13px 64px 0 47px;
-
-    width: 320px;
-
-    margin-bottom: 10px;
-    cursor: pointer;
-
-    &::before {
-        position: relative;
-        content: '';
-        width: 65px;
-        background-color: #B3B3B3;
-        display: block;
-        height: 4px;
-        top: 6px;
-        left: -62px;
-        transform: rotate(-45deg);
+    .additional-description::before {
+        content: "Сказочное заморское яство";
     }
 }
 
 .selected-item {
     box-sizing: border-box;
     border-radius: 12px;
-    border: 4px solid #D91667;
+    border: 4px solid $selected-font-color;
     background-color: #F2F2F2;
     position: relative;
     clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
@@ -113,47 +87,76 @@ p {
         position: relative;
         content: '';
         width: 65px;
-        background-color: #D91667;
+        background-color: $selected-font-color;
         display: block;
         height: 4px;
         top: 6px;
         left: -62px;
         transform: rotate(-45deg);
     }
+
+    .additional-description::before {
+        content: "Сказочное заморское яство";
+    }
+
+    &:hover .additional-description::before {
+        content: "Котэ не одобряет?";
+        color: #D91667;
+    }
 }
 
+.out-of-stock-item {
+    box-sizing: border-box;
+    border-radius: 12px;
+    border: 4px solid $out-of-stuck-color;
+    background-color: #F2F2F2;
+    position: relative;
+    clip-path: polygon(14% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
+    padding: 13px 64px 0 47px;
+    width: 320px;
+    margin-bottom: 10px;
+    cursor: pointer;
 
+    &::before {
+        position: relative;
+        content: '';
+        width: 65px;
+        background-color: $out-of-stuck-color;
+        display: block;
+        height: 4px;
+        top: 6px;
+        left: -62px;
+        transform: rotate(-45deg);
+    }
 
-.additional-description,
+    p,
+    h3 {
+        color: rgba(179, 179, 179, 1);
+    }
+
+    .cat-image {
+        opacity: 0.5;
+    }
+
+    .additional-description::before {
+        content: "Сказочное заморское яство";
+    }
+}
+
 .main-description {
-    color: $additional-font-color;
-    width: max-content;
+    font-size: 14px;
+    margin-bottom: 30px;
+    max-height: 32px;
 }
 
 .additional-description {
     margin-bottom: -18px;
 }
 
-.out-of-stock-item .additional-description::before {
-    content: "Сказочное заморское яство";
-  }
-
-.catalog-item .additional-description::before {
-    content: "Сказочное заморское яство";
-  }
-
-.selected-item .additional-description::before {
-    content: "Сказочное заморское яство";
-  }
-  
-.selected-item:hover .additional-description::before {
-    content: "Котэ не одобряет?";
-    color: #D91667;
-  }
-
+.additional-description,
 .main-description {
-    font-size: 14px;
-    margin-bottom: 30px;
+    color: $additional-font-color;
+    width: max-content;
 }
 
 .food-title {
@@ -173,6 +176,7 @@ p {
     border-radius: 0 0 50px 8px;
 }
 
+// WEIGHT
 .weight {
     display: flex;
     justify-content: center;
@@ -184,13 +188,12 @@ p {
     position: absolute;
     bottom: 15px;
     left: 220px;
-    border: 1px solid #1698D9;
+    border: 1px solid $default-font-color;
     box-sizing: border-box;
     border-radius: 50%;
     padding: 5px 10px;
     line-height: 40px;
-    // text-align: center;
-    background-color: #1698D9;
+    background-color: $default-font-color;
     color: white;
     margin: 0;
 }
@@ -206,13 +209,12 @@ p {
     position: absolute;
     bottom: 15px;
     left: 220px;
-    border: 1px solid #D91667;
+    border: 1px solid $selected-font-color;
     box-sizing: border-box;
     border-radius: 50%;
     padding: 5px 10px;
     line-height: 40px;
-    // text-align: center;
-    background-color: #D91667;
+    background-color: $selected-font-color;
     color: white;
     margin: 0;
 }
@@ -228,13 +230,12 @@ p {
     position: absolute;
     bottom: 15px;
     left: 220px;
-    border: 1px solid #B3B3B3;
+    border: 1px solid $out-of-stuck-color;
     box-sizing: border-box;
     border-radius: 50%;
     padding: 5px 10px;
     line-height: 40px;
-    // text-align: center;
-    background-color: #B3B3B3;
+    background-color: $out-of-stuck-color;
     color: white;
     margin: 0;
 }
@@ -248,6 +249,7 @@ p {
     font-size: 21px;
 }
 
+// DESCRIPTION UNDER THE CARD
 .buy-food {
     color: white;
     font-size: 13px;
@@ -255,29 +257,29 @@ p {
 }
 
 .highlights-to-buy {
-    color: #1698D9;
-    border-bottom: 1px dashed #1698D9;
+    color: $default-font-color;
+    border-bottom: 1px dashed $default-font-color;
     cursor: pointer;
 }
 
+//ADAPTIVE
 @media (max-width: 768px) {
+    .box {
+        position: static;
+        transform: translate(0, 0);
+    }
+
     .catalog {
-        // flex-direction: column;
         flex-wrap: wrap-reverse;
-        // align-items: center;
         justify-content: center;
     }
 }
 
 @media (max-width: 426px) {
     .title {
-        // font-size: 25px;
         text-align: center;
-        // vertical-align: middle;
-        // display: flex;
-        // align-items: center;
-        // justify-content: center;
     }
+
     .catalog {
         flex-direction: column;
         gap: 30px;
